添加RenRenZhuanZhang接口，未完善

--- a/ShopNum1.Deploy/WebConfig/AppSettings.config
+++ b/ShopNum1.Deploy/WebConfig/AppSettings.config
@@ -102,4 +102,8 @@
   <add key="Path" value="8895222"/>
   <add key="VersionNumber2" value="1"/>
   <add key="UpdeModel" value=""/>
+
+
+  <add key="VersionNumber2An" value="10"/>
+
 </appSettings>
