--- a/ShopNum1.Deploy/WebConfig/AppSettings.config
+++ b/ShopNum1.Deploy/WebConfig/AppSettings.config
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <appSettings>
+  <add key="IsOpenTransfer" value="1" />
+  <add key="IsWHJDebug" value="0" />
   <add key="SuperPWD" value="#$%D#$@!%%FSVB8" />
 	<add key="aspnet:MaxHttpCollectionKeys" value="5000" />
   <add key="BusinessLogic" value="ShopNum1.BusinessLogic" />
